# qnn-tutorial

./: .gitignore  CMakeLists.txt  README.md  index.md  test.sh
blog/qnn-doc/: index.md
blog/qnn-gemm/: index.md
blog/qnn-intro/: index.md
blog/qnn-matmul-weight-static/: index.md  weight_static_benchmark.cpp  weight_switch_benchmark.cpp
blog/qnn-oppackage-softmax/: index.md
blog/qnn-quantization/: index.md
blog/qnn-setup/: CMakeLists.txt  index.md  online_matmul.cpp  precision_benchmark.cpp
blog/qnn-setup-py/: index.md  matmul.py  test.py
